# ai-planner

./: .gitignore  ADVANCED_SAMPLES.md  CHANGELOG.md  QUICK_SAMPLES.md  README.md  SAMPLES.md  TECHNOLOGY.md  TRAINING.md  pyproject.toml  quick_run.sh
data/knowledge/: troubleshooting.md
data/training/: clarifications.jsonl  failures.jsonl  intents.jsonl  plans.jsonl
src/api/: main.py  store.py
src/api/routes/: mock_execution.py  plans.py
src/asr/: transcribe.py
src/models/: schemas.py
src/nlp/: entity_parser.py  intent_model.py
src/planner/: dependency_graph.py  plan_generator.py  planning_service.py
src/recommendations/: recommendation_engine.py  retrieval_index.py  troubleshooting_retriever.py
tests/: test_mock_execution.py  test_plan_generation.py
training/: train_intent_model.py  train_recommendation_model.py
