[project]
name = "ai-deployment-planner"
version = "0.1.0"
description = "Experimental voice and text driven deployment flow planner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mlflow>=3.0.0",
    "networkx>=3.4.0",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.4.0",
    "spacy>=3.8.0",
    "sqlmodel>=0.0.22",
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.1.0",
    "vosk>=0.3.45",
]
retrieval = [
    "faiss-cpu>=1.10.0",
    "chromadb>=0.6.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
